minor styling updates, print fix for ie issues in the report, chart fix in the report for charts not showing error message when there is no data

--- a/src/app/css/header.styl
+++ b/src/app/css/header.styl
@@ -92,9 +92,7 @@ gainLayer = #5952de
 	font-family 'Fira Sans', 'fira_sans_otregular', Georgia, serif
 	text-transform uppercase
 	display inline-block
-	font-weight bold
 	font-size 12px
-	// cursor pointer
 	margin 0 3px
 
 .gfw .app-header .layer-list-header
@@ -148,7 +146,7 @@ gainLayer = #5952de
 .gfw .filter-list .layer-list-item
 	border-bottom 1px solid baseLightGray
 	cursor pointer
-	padding 5px
+	padding 2px 5px
 
 .gfw .filter-list .layer-list-item.hidden
 	display none
@@ -342,6 +340,12 @@ gainLayer = #5952de
 	width 4px
 	left 2px
 	top -8px
+	
+.dj_gecko .gfw .layer-list-item.active .radio-icon span
+	top -6px
+	
+.dj_ie .gfw .layer-list-item.active .radio-icon span
+	top -4px
 
 .gfw .forest-change .radio-icon
 	border 1px solid forestChange
